--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Assignment1</string>
+    <string-array name="destinations">
+        <item>Paris</item>
+        <item>New York</item>
+        <item>Tokyo</item>
+        <item>London</item>
+        <item>Dubai</item>
+    </string-array>
 </resources>
