--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,20 @@
         <item>London</item>
         <item>Dubai</item>
     </string-array>
+
+    <string-array name="anime_names">
+        <item>Naruto</item>
+        <item>Attack on Titan</item>
+        <item>One Piece</item>
+        <item>Demon Slayer</item>
+    </string-array>
+
+    <!-- Anime Descriptions -->
+    <string-array name="anime_descriptions">
+        <item>A story about a young ninja.</item>
+        <item>Humanity fights against Titans.</item>
+        <item>A pirates adventure for treasure.</item>
+        <item>A boy battles demons to save his sister.</item>
+    </string-array>
+
 </resources>
